# pacman_game

./: .gitignore  CMakeLists.txt  README.md  main.c
src/: game.c  game.h  game_menu.c  game_menu.h  ghost.c  ghost.h  player.c  player.h
